--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "express": "^4.18.2",
-    "mongodb": "^6.3.0"  ,
-    "xss": "^1.0.8",
+    "bcrypt": "^5.0.0",
+    "express": "^4.19.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
-    "bcrypt": "^5.0.0"
+    "mongodb": "^6.3.0",
+    "uuid": "^9.0.1",
+    "xss": "^1.0.8"
   }
 }
