--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
-    "express": "^4.18.2",
     "mongodb": "^6.3.0"  ,
     "xss": "^1.0.8",
-    "express-handlebars": "^5.2.0",
-    "express-session": "^1.17.1",
     "handlebars": "^4.7.6",
-    "bcrypt": "^5.0.0"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.19.2",
+    "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3"
   }
 }
