--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^3.4.1",
     "express": "^4.19.2",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
