--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js",
-    "debug": "nodemon --inspect app.js"
+    "debug": "nodemon --inspect app.js",
+    "seed": "node seed.js"
   },
   "author": "Arya Shah  20012884, Connor S. Durkin 10443573 , Jayanth Kanala 20020619 , Gnaneswar Koyalamoodi 20017853 ",
   "license": "ISC",
